--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,9 +7,16 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/bootstrap/css/bootstrap.css")">
+
+        <script src='@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")' type="text/javascript"></script>
+        <script src='@routes.Assets.at("lib/jquery/js/jquery.min.js")' type="text/javascript"></script>
+        <script src='@routes.Assets.at("lib/highcharts/js/highcharts.js")' type="text/javascript"></script>
+        <script src='@routes.Assets.at("lib/highcharts/js/highcharts-more.js")' type="text/javascript"></script>
+
     </head>
     <body>
         @content
+        @footer()
     </body>
 </html>
