Initial attempt at landing page

--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -1,13 +1,13 @@
 <div id="footer">
     <div class="container">
-        <ul>
-            <li><a href="http://www.ncats.nih.gov" target="_blank">NCATS Home</a></li>
-            <li><a href="http://www.nih.gov/about/privacy.htm" target="_blank">Privacy Notice</a></li>
-            <li><a href="http://ncats.nih.gov/comments" target="_blank">Comment Policy</a></li>
-            <li><a href="http://www.nih.gov/about/disclaim.htm" target="_blank">Disclaimer</a></li>
-            <li><a href="http://ncats.nih.gov/accessibility" target="_blank">Accessibility</a></li>
-            <li><a href="http://ncats.nih.gov/foia" target="_blank">FOIA</a></li>
-            <li class="last"><a href="http://oig.hhs.gov/" target="_blank">OIG</a></li>
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="http://www.ncats.nih.gov" target="_blank">NCATS Home</a></li>
+            <li class="list-inline-item"><a href="http://www.nih.gov/about/privacy.htm" target="_blank">Privacy Notice</a></li>
+            <li class="list-inline-item"><a href="http://ncats.nih.gov/comments" target="_blank">Comment Policy</a></li>
+            <li class="list-inline-item"><a href="http://www.nih.gov/about/disclaim.htm" target="_blank">Disclaimer</a></li>
+            <li class="list-inline-item"><a href="http://ncats.nih.gov/accessibility" target="_blank">Accessibility</a></li>
+            <li class="list-inline-item"><a href="http://ncats.nih.gov/foia" target="_blank">FOIA</a></li>
+            <li class="list-inline-item last"><a href="http://oig.hhs.gov/" target="_blank">OIG</a></li>
         </ul>
 
         <p class="address">Build: @controllers.BuildInfo.TIME (commit: <a href="https://spotlite.nih.gov/ncats/scaffold-trend-explorer/tree/@controllers.BuildInfo.COMMIT">@controllers.BuildInfo.COMMIT</a>
