--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,30 @@
 @(message: String)
 
-@main("Welcome to Play") {
+@main("Scaffold Trend Explorer") {
 
-    Hello World
+    <div class="container">
+        <h3>Scaffold Trend Explorer
+            <small class="text-muted">v1.0</small></h3>
+
+        <div class="row">
+            <div class="col-1">
+                Some blurb about the app
+            </div>
+        </div>
+
+        <div clas="row">
+            <form class="form-inline">
+                <div class=" form-group">
+                    <input type="text" class="form-control form-control-lg"
+                    id="smilesTextField" aria-describedby="smilesHelp" placeholder="Enter SMILES">
+                    <button type="button" class="btn btn-info" id="structureSearchDialog">
+                        <i class="fa fa-cog fa-fw" aria-hidden="true"></i>
+                    </button>
+                    <button type="submit" class="btn btn-primary">Search</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
 
 }
