Refactored views Added stub view for trend plot

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,7 +18,10 @@
 
     </head>
     <body>
-        @content
-        @footer()
+        <div class="container-fluid">
+            @heading()
+            @content
+            @footer()
+        </div>
     </body>
 </html>
