--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,30 +1,68 @@
-@(message: String)
+@(form: Form[SmilesForm.Data], postUrl: Call)(implicit request: MessagesRequestHeader)
 
 @main("Scaffold Trend Explorer") {
 
-    <div class="container">
-        <h3>Scaffold Trend Explorer
-            <small class="text-muted">v1.0</small></h3>
 
-        <div class="row">
-            <div class="col-1">
-                Some blurb about the app
-            </div>
+    <div class="row">
+        <div class="col-1">
+            Some blurb about the app
         </div>
+    </div>
 
-        <div clas="row">
-            <form class="form-inline">
-                <div class=" form-group">
-                    <input type="text" class="form-control form-control-lg"
-                    id="smilesTextField" aria-describedby="smilesHelp" placeholder="Enter SMILES">
-                    <button type="button" class="btn btn-info" id="structureSearchDialog">
-                        <i class="fa fa-cog fa-fw" aria-hidden="true"></i>
-                    </button>
-                    <button type="submit" class="btn btn-primary">Search</button>
-                </div>
-            </form>
+    <div class="row">
+        @helper.form(postUrl) {
+            @helper.CSRF.formField
+            @helper.inputText(form("smiles"))
+            <button>Search</button>
+        }
+        @*<form class="form-inline"role="search" method="GET" action="@controllers.routes.Application.search(null)">*@
+        @*<div class=" form-group">*@
+        @*<input type="text" class="form-control"*@
+        @*id="smilesTextField" aria-describedby="smilesHelp" placeholder="Enter SMILES">*@
+        @*<button type="button" class="btn btn-info" id="structureSearchDialog">*@
+        @*<i class="fa fa-cog fa-fw" aria-hidden="true"></i>*@
+        @*</button>*@
+        @*<button type="submit" class="btn btn-primary">Search</button>*@
+        @*</div>*@
+        @*</form>*@
+    </div>
+
+    <div class="row">
+        <div class="col-lg-8" id="plotDiv">
+
+        </div>
+        <div class="col-lg-4" id="controlDiv">
+
         </div>
     </div>
 
 
+
+    <script type="text/javascript">
+            $(function () {
+                var myChart = Highcharts.chart('plotDiv', {
+                    chart: {
+                        type: 'bar'
+                    },
+                    title: {
+                        text: 'Fruit Consumption'
+                    },
+                    xAxis: {
+                        categories: ['Apples', 'Bananas', 'Oranges']
+                    },
+                    yAxis: {
+                        title: {
+                            text: 'Fruit eaten'
+                        }
+                    },
+                    series: [{
+                        name: 'Jane',
+                        data: [1, 0, 4]
+                    }, {
+                        name: 'John',
+                        data: [5, 7, 3]
+                    }]
+                });
+            });
+    </script>
 }
