--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -1,4 +1,60 @@
-@(msg: String)
+@(form: Form[SmilesForm.Data], postUrl: Call)(implicit request: MessagesRequestHeader)
+
 @main("Scaffold Trend Explorer") {
-    @msg
+
+    <div class="row">
+        @helper.form(postUrl) {
+            @helper.CSRF.formField
+            @helper.inputText(form("smiles"))
+            <button>Search</button>
+        }
+        @*<form class="form-inline"role="search" method="GET" action="@controllers.routes.Application.search(null)">*@
+        @*<div class=" form-group">*@
+        @*<input type="text" class="form-control"*@
+        @*id="smilesTextField" aria-describedby="smilesHelp" placeholder="Enter SMILES">*@
+        @*<button type="button" class="btn btn-info" id="structureSearchDialog">*@
+        @*<i class="fa fa-cog fa-fw" aria-hidden="true"></i>*@
+        @*</button>*@
+        @*<button type="submit" class="btn btn-primary">Search</button>*@
+        @*</div>*@
+        @*</form>*@
+    </div>
+
+    <div class="row">
+        <div class="col-lg-8" id="plotDiv">
+
+        </div>
+        <div class="col-lg-4" id="controlDiv">
+
+        </div>
+    </div>
+
+    <script type="text/javascript">
+            $(function () {
+                var myChart = Highcharts.chart('plotDiv', {
+                    chart: {
+                        type: 'bar'
+                    },
+                    title: {
+                        text: 'Fruit Consumption'
+                    },
+                    xAxis: {
+                        categories: ['Apples', 'Bananas', 'Oranges']
+                    },
+                    yAxis: {
+                        title: {
+                            text: 'Fruit eaten'
+                        }
+                    },
+                    series: [{
+                        name: 'Jane',
+                        data: [1, 0, 4]
+                    }, {
+                        name: 'John',
+                        data: [5, 7, 3]
+                    }]
+                });
+            });
+    </script>
+
 }
