--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -26,13 +26,13 @@
 
     <div class="row">
     @for(s <- smiles) {
-        <div class="col-md-1">
+        <div class="col-md-2">
             <div class="card" id="card-@s">
                 <img class="card-img-top btn"
                 src="https://tripod.nih.gov/servlet/renderServletv12/?structure=@s&size=75&format=svg"
                 alt="@s" style="border-width: 5px;
-                    border-color: @smiColMap(s)
-                ">
+                    border-color:
+                @smiColMap(s);">
                 <div class="card-block"></div>
             </div>
         </div>
@@ -48,14 +48,15 @@
     </div>
 
     <script type="text/javascript">
-            /*
-             defining(trendData.values.flatMap(m => m.keySet).toSet.toList.sorted){ uniqueYears =>
-             }
-             */
+
             $(function () {
-                var myChart = Highcharts.chart('plotDiv', {
+                var myChart = new Highcharts.Chart({
                     chart: {
-                        type: 'line'
+                        renderTo: 'plotDiv',
+                        type: 'line',
+                    },
+                    title: {
+                        text: null
                     },
                     xAxis: {
                         title: {
@@ -64,7 +65,14 @@
                     },
                     series: [
                         @for( (smi,cmap) <- trendData ) {
-                        {name: '@smi', data: [1, 1, 1]}
+                        {
+                            name: '@smi',
+                            showInLegend: false,
+                            color: '@smiColMap(smi)',
+                            data: [
+                                @for( (x,y) <- cmap.toList.sortWith(_._1 < _._1) ) { [@x, @y], }
+                            ]
+                        },
                         }
                     ]
                 });
