--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -8,8 +8,6 @@
         <li class="list-inline-item"><a href="http://ncats.nih.gov/foia" target="_blank">FOIA</a></li>
         <li class="list-inline-item last"><a href="http://oig.hhs.gov/" target="_blank">OIG</a></li>
     </ul>
-    <p class="address">Build: @controllers.BuildInfo.TIME (commit: <a href="https://spotlite.nih.gov/ncats/scaffold-trend-explorer/tree/@controllers.BuildInfo.COMMIT">@controllers.BuildInfo.COMMIT</a>
-        or
-        )</p>
+    <p class="address">Build: @controllers.BuildInfo.TIME (commit: <a href="https://spotlite.nih.gov/ncats/scaffold-trend-explorer/tree/@controllers.BuildInfo.COMMIT">@controllers.BuildInfo.COMMIT</a>or)</p>
     <p class="address">National Center for Advancing Translational Sciences (NCATS), 6701 Democracy Boulevard, Bethesda MD 20892-4874 • 301-435-0888</p>
 </div>
