properly label stuff

--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -70,7 +70,8 @@
                 var myChart = new Highcharts.Chart({
                     chart: {
                         renderTo: 'plotDiv',
-                        type: 'line'
+                        type: 'line',
+                        marginBottom: 25
                     },
                     title: {
                         text: null
