--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,13 +9,14 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/bootstrap/css/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/font-awesome/css/font-awesome.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/highcharts/css/highcharts.css")">
 
         <script src='@routes.Assets.at("lib/jquery/jquery.min.js")' type="text/javascript"></script>
         <script src='@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")' type="text/javascript"></script>
 
-        <script src='@routes.Assets.at("lib/highcharts/js/highcharts.js")' type="text/javascript"></script>
-        <script src='@routes.Assets.at("lib/highcharts/js/highcharts-more.js")' type="text/javascript"></script>
+
+        <!-- Don't use local version since it doesn't respect per series color spec -->
+        <script src="http://code.highcharts.com/highcharts.js"></script>
+        <script src="http://code.highcharts.com/highcharts-more.js"></script>
 
     </head>
     <body>
