--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -41,7 +41,7 @@
         @*</form>*@
     </div>
 
-    <div class="row">
+    <div class="row" style="padding: 1em;">
     @for(s <- smiles) {
         <div class="col-md-2">
             <div class="card" id="card-@s">
@@ -55,7 +55,7 @@
         </div>
     }
     </div>
-    <div class="row">
+    <div class="row" style="padding: 1em;">
         <div class="col-lg-8" id="plotDiv">
 
         </div>
@@ -68,10 +68,10 @@
 
             $(function () {
                 var myChart = new Highcharts.Chart({
+                    credits:false,
                     chart: {
                         renderTo: 'plotDiv',
                         type: 'line',
-                        marginBottom: 25
                     },
                     title: {
                         text: null
