Some formatting updates

--- a/app/views/heading.scala.html
+++ b/app/views/heading.scala.html
@@ -1,3 +1,4 @@
-<h3>Scaffold Trend Explorer
+<h3>
+    <a href="/ste">Scaffold Trend Explorer</a>
     <small class="text-muted">v1.0.0</small>
 </h3>
