--- a/app/views/tform.scala.html
+++ b/app/views/tform.scala.html
@@ -1,10 +1,10 @@
-@(form: Form[TrendForm.Data], postUrl: Call) {
 
-    import b3.inline.fieldConstructor
-    @b3.form(postUrl) {
+@(form: Form[TrendForm.Data], postUrl: Call)(implicit request: MessagesRequestHeader) {
+
+    @helper.form(postUrl) {
         @helper.CSRF.formField
-        @b3.text(form("smiles"), '_placeholder -> "Enter a SMILES string")
-        @b3.select(form("property"),
+        @helper.inputText(form("smiles"), '_placeholder -> "Enter a SMILES string")
+        @helper.select(form("property"),
             options = Seq(
                 "compounds" -> "Compounds",
                 "assays" -> "Assays"
@@ -12,7 +12,6 @@
             '_selected -> "Compounds",
             '_label -> "Trend"
         )
-        @b3.submit('class -> "btn btn-default") { Search }
-        <!-- <button>Search</button> -->
+        <button>Search</button>
     }
 }
