Ensure that selected trend property remains selected on page reload

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="row">
-        @tform(form, postUrl)
+        @tform(form, postUrl, "compounds")
     </div>
 
     <div class="row">
