--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -16,7 +16,7 @@
 @main("Scaffold Trend Explorer") {
 
     <div class="row">
-        @tform(form, postUrl)
+        @tform(form, postUrl, property)
 
         @*<form class="form-inline"role="search" method="GET" action="@controllers.routes.Application.search(null)">*@
         @*<div class=" form-group">*@
