--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,16 +14,17 @@
         <script src='@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")' type="text/javascript"></script>
 
 
-        <!-- Don't use local version since it doesn't respect per series color spec -->
+            <!-- Don't use local version since it doesn't respect per series color spec -->
         <script src="http://code.highcharts.com/highcharts.js"></script>
         <script src="http://code.highcharts.com/highcharts-more.js"></script>
 
     </head>
     <body>
-        <div class="container-fluid">
-            @heading()
-            @content
-            @footer()
-        </div>
+        @menu()
+    <div class="container-fluid">
+        @heading()
+        @content
+        @footer()
+    </div>
     </body>
 </html>
