--- a/app/views/menu.scala.html
+++ b/app/views/menu.scala.html
@@ -13,9 +13,9 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bookmarked Scaffolds<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/ste/trends?smiles=C1CC2CCC3C%28CCC4CCCCC34%29C2C1">Steroid core</a></li>
-                        <li><a href="/ste/trends?smiles=C1COC1">Oxetane</a></li>
-                        <li><a href="/ste/trends?smiles=O%3DC1CSC%28%3DS%29N1">Rhodanine</a></li>
+                        <li><a href="/ste/search?smiles=C1CC2CCC3C%28CCC4CCCCC34%29C2C1&property=compounds">Steroid core</a></li>
+                        <li><a href="/ste/search?smiles=C1COC1&property=compounds">Oxetane</a></li>
+                        <li><a href="/ste/search?smiles=O%3DC1CSC%28%3DS%29N1&property=compounds">Rhodanine</a></li>
                     </ul>
                 </li>
             </ul>
