--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -1,4 +1,4 @@
-<div id="footer">
+<div class="navbar navbar-default navbar-fixed-bottom" id="footer">
     <ul class="list-inline">
         <li class="list-inline-item"><a href="http://www.ncats.nih.gov" target="_blank">NCATS Home</a></li>
         <li class="list-inline-item"><a href="http://www.nih.gov/about/privacy.htm" target="_blank">Privacy Notice</a></li>
