--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -21,10 +21,9 @@
     </head>
     <body>
         @menu()
-    <div class="container-fluid">
-        @heading()
+    <div class="content">
         @content
-        @footer()
+        <!-- @footer() -->
     </div>
     </body>
 </html>
