--- a/app/views/tform.scala.html
+++ b/app/views/tform.scala.html
@@ -1,13 +1,16 @@
 @(form: Form[TrendForm.Data], postUrl: Call, property: String)(implicit request: MessagesRequestHeader)
 
 @helper.form(postUrl, 'class -> "form-inline") {
-    <div class="form-group">
-        @helper.CSRF.formField
-        <input type="text" placeholder="Enter a SMILES string" size="45" id='@form("smiles").name' name='@form("smiles").name'>
-        <select id='@form("property").name' name='@form("property").name'>
-            <option value="compounds" @if(property.equals("compounds")){ selected }>Compounds</option>
-            <option value="assays" @if(property.equals("assays")){ selected }>Assays</option>
-        </select>
-        <button>Search</button>
+    <div class="col-1" style="padding-top: 2em;
+        padding-bottom: 0.5em;">
+        <div class="form-group">
+            @helper.CSRF.formField
+            <input type="text" placeholder="Enter a SMILES string" size="45" id='@form("smiles").name' name='@form("smiles").name'>
+            <select id='@form("property").name' name='@form("property").name'>
+                <option value="compounds" @if(property.equals("compounds")) { selected }>Compounds</option>
+                <option value="assays" @if(property.equals("assays")) { selected }>Assays</option>
+            </select>
+            <button>Search</button>
+        </div>
     </div>
 }
