--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
-@(form: Form[TrendForm.Data], postUrl: Call)(implicit request: MessagesRequestHeader)
+@(app: controllers.Application, form: Form[TrendForm.Data], postUrl: Call)(implicit request: MessagesRequestHeader)
 
-@main("Scaffold Trend Explorer") {
+@main(app, "Scaffold Trend Explorer") {
 
     <div class="container vertical-center" id="main-box">
         <div class="row">
