--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,17 +1,18 @@
-@(title: String)(content: Html)
+@(app: controllers.Application, title: String)(content: Html)
 
 <!DOCTYPE html>
 
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/bootstrap/css/bootstrap.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/font-awesome/css/font-awesome.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/font-awesome/css/font-awesome.css")">
+        <link rel="stylesheet" media="screen" href="@app.webjars.url("font-awesome.min.css")">
 
-        <script src='@routes.Assets.at("lib/jquery/jquery.min.js")' type="text/javascript"></script>
-        <script src='@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")' type="text/javascript"></script>
+        <script src='@routes.Assets.versioned("lib/jquery/jquery.min.js")' type="text/javascript"></script>
+        <script src='@routes.Assets.versioned("lib/bootstrap/js/bootstrap.min.js")' type="text/javascript"></script>
 
 
             <!-- Don't use local version since it doesn't respect per series color spec -->
