--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -1,4 +1,5 @@
-@(form: Form[TrendForm.Data], postUrl: Call, property: String, smiles: Seq[String], smiColMap: Map[String, String],
+@(app: controllers.Application, form: Form[TrendForm.Data], postUrl: Call,
+        property: String, smiles: Seq[String], smiColMap: Map[String, String],
         trendData: Map[String, Map[Int, Int]])(implicit request: MessagesRequestHeader)
 
 
@@ -13,7 +14,7 @@
     }
 }
 
-@main("Scaffold Trend Explorer") {
+@main(app, "Scaffold Trend Explorer") {
 
     <div class="container vertical-center" id="main-box">
         <div class="row">
