--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,7 +9,7 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/font-awesome/css/font-awesome.css")">
-        <link rel="stylesheet" media="screen" href="@app.webjars.url("font-awesome.min.css")">
+        @*<link rel="stylesheet" media="screen" href="@app.webjars.url("font-awesome.min.css")">*@
 
         <script src='@routes.Assets.versioned("lib/jquery/jquery.min.js")' type="text/javascript"></script>
         <script src='@routes.Assets.versioned("lib/bootstrap/js/bootstrap.min.js")' type="text/javascript"></script>
