Parametrized menu template so that bookmarked scaffolds respect the selected property

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(app: controllers.Application, title: String)(content: Html)
+@(app: controllers.Application, title: String)(menu: Html)(content: Html)
 
 <!DOCTYPE html>
 
@@ -21,7 +21,7 @@
 
     </head>
     <body>
-        @menu()
+        @menu
     <div class="content">
         @content
         <!-- @footer() -->
