--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -15,6 +15,8 @@
 }
 
 @main(app, "Scaffold Trend Explorer") {
+    @menu(property)
+} {
 
     <div class="container vertical-center" id="main-box">
         <div class="row">
