--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -1,6 +1,8 @@
 @(app: controllers.Application)
 
 @main(app, "Scaffold Trend Explorer") {
+    @menu("compounds")
+} {
     <div class="container vertical-center" id="main-box">
 
         <div class="col-md-12">
