--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,8 @@
 @(app: controllers.Application, form: Form[TrendForm.Data], postUrl: Call)(implicit request: MessagesRequestHeader)
 
 @main(app, "Scaffold Trend Explorer") {
+    @menu("compounds")
+} {
 
     <div class="container vertical-center" id="main-box">
         <div class="row">
