--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -36,7 +36,7 @@
                 <a href="/ste/delete?smiles=@s" class="card-link text-muted">
                     <i class="fa fa-trash" aria-hidden="true"></i>
                 </a>
-                <a href="/ste/download?smiles=@s" class="card-link text-muted">
+                <a href="/ste/download?smiles=@s&property=@property" class="card-link text-muted">
                     <i class="fa fa-download" aria-hidden="true"></i>
                 </a>
             </div>
