Added support for QED trends

--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -8,7 +8,7 @@
         case "compounds" => "Unique Compound Count"
         case "assays" => "Tested Bioassays"
         case "jifs" => "Median JIF Rank"
-        case "beauty" => "Molecular Beauty"
+        case "qed" => "Chemical Beauty"
         case "3dness" => "3dness"
         case "complexity" => "Molecular Complexity"
     }
