refactored query code to allow for double values for any given property fixed some SQL bugs

--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -1,6 +1,6 @@
 @(app: controllers.Application, form: Form[TrendForm.Data], postUrl: Call,
         property: String, smiles: Seq[String], smiColMap: Map[String, String],
-        trendData: Map[String, Map[Int, Int]])(implicit request: MessagesRequestHeader)
+        trendData: Map[String, Map[Int, Double]])(implicit request: MessagesRequestHeader)
 
 
 @getYaxisLabel(s: String) = @{
