--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -25,8 +25,11 @@
                     <li>Unique compound counts</li>
                     <li>Tested assay count</li>
                     <li>Median bioassay activity</li>
+                    <li>Chemical beauty (a measure of drug-likeness described in
+                        <a href="https://www.nature.com/nchem/journal/v4/n2/full/nchem.1243.html">
+                            Bickerton et al, <i>Nat. Chem. Biol.</i>, <b>2012</b>, <i>4</i>(2), 90-98.</a>
                 </ul>
-                <p>As you might expect, very small or commonly occuring scaffolds can result in long
+                <p>As you might expect, very small or commonly occurring scaffolds can result in long
                     query times. We currently employ some simple heuristics to avoid querying for such
                     cases.</p>
 
