--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -36,7 +36,7 @@
                     <a href="@controllers.routes.Application.delete(s)" class="card-link text-muted">
                         <i class="fa fa-trash" aria-hidden="true"></i>
                     </a>
-                    <a href="@controllers.routes.Application.download(smiles, property)" class="card-link text-muted">
+                    <a href="@controllers.routes.Application.download(s, property)" class="card-link text-muted">
                         <i class="fa fa-download" aria-hidden="true"></i>
                     </a>
                 </div>
