--- a/app/views/tform.scala.html
+++ b/app/views/tform.scala.html
@@ -9,6 +9,7 @@
             <select id='@form("property").name' name='@form("property").name'>
                 <option value="compounds" @if(property.equals("compounds")) { selected }>Compounds</option>
                 <option value="assays" @if(property.equals("assays")) { selected }>Assays</option>
+                <option value="logS" @if(property.equals("logS")) { selected }>Solubility</option>
                 <option value="qed" @if(property.equals("qed")) { selected }>Chemical Beauty</option>
             </select>
             <button>Search</button>
