--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -9,6 +9,7 @@
         case "assays" => "Tested Bioassays"
         case "jifs" => "Median JIF Rank"
         case "qed" => "Chemical Beauty"
+        case "logS" => "Solubility (logS at pH = 7.4)"
         case "3dness" => "3dness"
         case "complexity" => "Molecular Complexity"
     }
