Updated code to support Fsp3 property

--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -26,6 +26,7 @@
                     <li>Tested assay count</li>
                     <li>Solubility (log S at pH = 7.4), computed using <a href="https://www.optibrium.com/stardrop/stardrop-features.php">
                         StarDrop</a></li>
+                    <li>Fsp3 (fraction of sp3 carbons, a measure of 3D-ness)</li>
                     <li>Chemical beauty (a measure of drug-likeness described in
                         <a href="https://www.nature.com/nchem/journal/v4/n2/full/nchem.1243.html">
                             Bickerton et al, <i>Nat. Chem. Biol.</i>, <b>2012</b>, <i>4</i>(2), 90-98</a>).
