--- a/app/views/trends.scala.html
+++ b/app/views/trends.scala.html
@@ -8,9 +8,9 @@
         case "compounds" => "Unique Compound Count"
         case "assays" => "Tested Bioassays"
         case "jifs" => "Median JIF Rank"
-        case "qed" => "Chemical Beauty"
-        case "logS" => "Solubility (logS at pH = 7.4)"
-        case "3dness" => "3dness"
+        case "qed" => "Median Chemical Beauty"
+        case "logS" => "Median logS (pH = 7.4)"
+        case "Fsp3" => "Median Fsp3"
         case "complexity" => "Molecular Complexity"
     }
 }
