--- a/app/views/tform.scala.html
+++ b/app/views/tform.scala.html
@@ -10,6 +10,7 @@
                 <option value="compounds" @if(property.equals("compounds")) { selected }>Compounds</option>
                 <option value="assays" @if(property.equals("assays")) { selected }>Assays</option>
                 <option value="logS" @if(property.equals("logS")) { selected }>Solubility</option>
+                <option value="Fsp3" @if(property.equals("Fsp3")) { selected }>Fsp3</option>
                 <option value="qed" @if(property.equals("qed")) { selected }>Chemical Beauty</option>
             </select>
             <button>Search</button>
